; ModuleID = '/home/carl/AnghaBench/freebsd/sys/geom/sched/extr_gs_rr.c_g_rr_init_class.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/geom/sched/extr_gs_rr.c_g_rr_init_class.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32, i32, i32, i32 }
%struct.g_rr_softc = type { i32 }
%struct.g_rr_queue = type { i32, i32, i32, %struct.g_rr_softc*, i32 }

@me = common dso_local global %struct.TYPE_2__ zeroinitializer, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*, i8*)* @g_rr_init_class to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @g_rr_init_class(i8* %0, i8* %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca %struct.g_rr_softc*, align 8
  %6 = alloca %struct.g_rr_queue*, align 8
  store i8* %0, i8** %3, align 8
  store i8* %1, i8** %4, align 8
  %7 = load i8*, i8** %3, align 8
  %8 = bitcast i8* %7 to %struct.g_rr_softc*
  store %struct.g_rr_softc* %8, %struct.g_rr_softc** %5, align 8
  %9 = load i8*, i8** %4, align 8
  %10 = bitcast i8* %9 to %struct.g_rr_queue*
  store %struct.g_rr_queue* %10, %struct.g_rr_queue** %6, align 8
  %11 = load %struct.g_rr_queue*, %struct.g_rr_queue** %6, align 8
  %12 = getelementptr inbounds %struct.g_rr_queue, %struct.g_rr_queue* %11, i32 0, i32 4
  %13 = call i32 @bioq_init(i32* %12)
  %14 = call i32 @get_bounded(i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @me, i32 0, i32 3), i32 0)
  %15 = mul nsw i32 1024, %14
  %16 = load %struct.g_rr_queue*, %struct.g_rr_queue** %6, align 8
  %17 = getelementptr inbounds %struct.g_rr_queue, %struct.g_rr_queue* %16, i32 0, i32 0
  store i32 %15, i32* %17, align 8
  %18 = call i32 @get_bounded(i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @me, i32 0, i32 2), i32 2)
  %19 = load %struct.g_rr_queue*, %struct.g_rr_queue** %6, align 8
  %20 = getelementptr inbounds %struct.g_rr_queue, %struct.g_rr_queue* %19, i32 0, i32 1
  store i32 %18, i32* %20, align 4
  %21 = call i32 @get_bounded(i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @me, i32 0, i32 1), i32 2)
  %22 = load %struct.g_rr_queue*, %struct.g_rr_queue** %6, align 8
  %23 = getelementptr inbounds %struct.g_rr_queue, %struct.g_rr_queue* %22, i32 0, i32 2
  store i32 %21, i32* %23, align 8
  %24 = load %struct.g_rr_softc*, %struct.g_rr_softc** %5, align 8
  %25 = load %struct.g_rr_queue*, %struct.g_rr_queue** %6, align 8
  %26 = getelementptr inbounds %struct.g_rr_queue, %struct.g_rr_queue* %25, i32 0, i32 3
  store %struct.g_rr_softc* %24, %struct.g_rr_softc** %26, align 8
  %27 = load %struct.g_rr_queue*, %struct.g_rr_queue** %6, align 8
  %28 = getelementptr inbounds %struct.g_rr_queue, %struct.g_rr_queue* %27, i32 0, i32 3
  %29 = load %struct.g_rr_softc*, %struct.g_rr_softc** %28, align 8
  %30 = getelementptr inbounds %struct.g_rr_softc, %struct.g_rr_softc* %29, i32 0, i32 0
  %31 = load i32, i32* %30, align 4
  %32 = add nsw i32 %31, 1
  store i32 %32, i32* %30, align 4
  %33 = load i32, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @me, i32 0, i32 0), align 4
  %34 = add nsw i32 %33, 1
  store i32 %34, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @me, i32 0, i32 0), align 4
  ret i32 0
}

declare dso_local i32 @bioq_init(i32*) #1

declare dso_local i32 @get_bounded(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
